[project]
name = "fleet-manager"
version = "2.0.0"
description = "Telegram Fleet Orchestrator - Stateless task queue system for up to 10,000 Telegram accounts"
requires-python = ">=3.11"
dependencies = [
    "kurigram>=2.2.19",
    "TgCrypto",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "arq>=0.23.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis[asyncio]>=5.2.0",
    "geoip2>=4.2.0",
    "phonenumbers>=8.13.0",
    "alembic>=1.14.0",
    "prometheus-client>=0.22.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "structlog>=24.4.0",
    "psutil>=7.2.2",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip>=12.11",
    "opentele==1.15.1",
    "pyqt5==5.15.9",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "factory-boy",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "accelerated: long time-compressed safety-cycle test (~3.5 real h for a virtual week at TIME_SCALE=48); run nightly, not on every PR",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["app/db/models.py", "migrations/*", "scripts/*"]
# SQLAlchemy async runs request handlers through a greenlet bridge; without this,
# coverage under-reports ASGI endpoint code (FR-135).
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
